Writing Group Apr 21

--- a/writing/PhD.bib
+++ b/writing/PhD.bib
@@ -58,6 +58,22 @@
   pages = {1--1}
 }
 
+@article{alcoff1988,
+  title = {Cultural {{Feminism}} versus {{Post}}-{{Structuralism}}: {{The Identity Crisis}} in {{Feminist Theory}}},
+  shorttitle = {Cultural {{Feminism}} versus {{Post}}-{{Structuralism}}},
+  author = {Alcoff, Linda},
+  year = {1988},
+  month = apr,
+  volume = {13},
+  pages = {405--436},
+  issn = {0097-9740, 1545-6943},
+  doi = {10.1086/494426},
+  file = {/home/icrichmond/Zotero/storage/R8P399CF/Alcoff - 1988 - Cultural Feminism versus Post-Structuralism The I.pdf},
+  journal = {Signs: Journal of Women in Culture and Society},
+  language = {en},
+  number = {3}
+}
+
 @article{allen2016,
   title = {Scaling up Movements: {{From}} Individual Space Use to Population Patterns},
   author = {Allen, Andrew M. and Mansson, Johan and Sand, Hakan and Malmsten, Jonas and Ericsson, G{\"o}ran and Singh, Navinder J.},
@@ -854,14 +870,19 @@
   number = {6}
 }
 
-@article{bried2006,
-  title = {{{NOTE ABUNDANCE PATTERNS OF DRAGONFLIES ALONG A WETLAND BUFFER}}},
-  author = {Bried, Jason T and Ervin, Gary N},
+@article{bried2006a,
+  title = {Abundance Patterns of Dragonflies along a Wetland Buffer},
+  author = {Bried, Jason T. and Ervin, Gary N.},
   year = {2006},
+  month = sep,
   volume = {26},
   pages = {878--883},
-  abstract = {Local abundance of animals with aquatic and terrestrial life stages may be useful to determine criteria for protective buffers around wetlands. Maiden flights and daily commutes of adult Odonata (damselflies, dragonflies) occur between wetland breeding area and adjacent upland habitat used for foraging, maturation, and nocturnal roosting. We measured abundance of dragonflies adjacent to a wetland in Mississippi, USA to determine if abundance varied with distance from water. Sexually mature males and combined females/prereproductive adult males (females-immatures) were recorded 10\textendash{} 160 m from the littoral edge of a 185 ha shallow reservoir. The number of dragonflies was dominated by Celithemis eponina throughout the study period. Mean abundance did not change with distance from water out to 160 m, both for all species combined and for each of three dominant species. In the assemblage, mature males outnumbered females-immatures in the 10\textendash 40 m distance, whereas the reverse occurred in the 130\textendash 160 m distance. At the species-level, there was a mixed response in the mature male: female-immature ratio, with little resemblance to the assemblage pattern. Results of this study suggest that wide buffer zones around wetlands may be essential to protect Odonata assemblages, especially females and sexually immature adults. Furthermore, odonate flight behavior may serve as a useful bio-criterion to determine the width of ecologically significant wetland buffers.},
+  issn = {0277-5212, 1943-6246},
+  doi = {10.1672/0277-5212(2006)26[878:APODAA]2.0.CO;2},
+  abstract = {Local abundance of animals with aquatic and terrestrial life stages may be useful to determine criteria for protective buffers around wetlands. Maiden flights and daily commutes of adult Odonata (damselflies, dragonflies) occur between wetland breeding area and adjacent upland habitat used for foraging, maturation, and nocturnal roosting. We measured abundance of dragonflies adjacent to a wetland in Mississippi, USA to determine if abundance varied with distance from water. Sexually mature males and combined females/prereproductive adult males (females-immatures) were recorded 10\textendash 160 m from the littoral edge of a 185 ha shallow reservoir. The number of dragonflies was dominated by Celithemis eponina throughout the study period. Mean abundance did not change with distance from water out to 160 m, both for all species combined and for each of three dominant species. In the assemblage, mature males outnumbered females-immatures in the 10\textendash 40 m distance, whereas the reverse occurred in the 130\textendash 160 m distance. At the species-level, there was a mixed response in the mature male: female-immature ratio, with little resemblance to the assemblage pattern. Results of this study suggest that wide buffer zones around wetlands may be essential to protect Odonata assemblages, especially females and sexually immature adults. Furthermore, odonate flight behavior may serve as a useful biocriterion to determine the width of ecologically significant wetland buffers.},
+  file = {/home/icrichmond/Zotero/storage/T4UJFGI7/Bried and Ervin - 2006 - Abundance patterns of dragonflies along a wetland .pdf},
   journal = {Wetlands},
+  language = {en},
   number = {3}
 }
 
@@ -1283,6 +1304,22 @@
   file = {/home/icrichmond/Zotero/storage/UISP5FAA/Charles-Edwards et al. - 1987 - An Analysis of Spatial Variation in the Nitrogen Content of Leaves from Different Horizons Within a Cano.pdf},
   journal = {Annals of Botany},
   keywords = {crop growth,Leaf nitrogen content,light interception}
+}
+
+@article{chen2020,
+  title = {The Neighborhood Effect of Exposure to Blue Space on Elderly Individuals' Mental Health: {{A}} Case Study in {{Guangzhou}}, {{China}}},
+  shorttitle = {The Neighborhood Effect of Exposure to Blue Space on Elderly Individuals' Mental Health},
+  author = {Chen, Yujie and Yuan, Yuan},
+  year = {2020},
+  month = may,
+  volume = {63},
+  pages = {102348},
+  issn = {13538292},
+  doi = {10.1016/j.healthplace.2020.102348},
+  abstract = {Within the urban setting, blue space refers to all visible surface waters, including lakes, rivers, and coastal waters. Exposure to the natural environment, especially blue space, has been consistently linked to better mental health. While previous studies have disentangled the positive relationship between neighborhood blue space and mental health, scant attention has been paid to pathways through which neighborhood blue space affects mental health among Chinese urban elderly individuals. Based on questionnaire data collected from Guangzhou in 2018, remote sensing images, street-scapes, and other such sources, we extracted various blue space indicators. We employed multilevel linear regression modeling, mediating effect modeling to examine bio-psychosocial path\- ways and mechanisms linking exposure to blue space and elderly individuals' mental health. Propensity score matching method was employed to deal with selection bias. According to this empirical analysis, firstly, neighborhood exposure to blue space was significantly associated with elderly individuals' mental health. Sec\- ondly, environmental harm reduction, stress reduction, and social contact facilitation played a separate role in mediating the effect of blue space exposure on elderly individuals' mental health. These findings confirm the mediation pathways in the context of Chinese cities. Our research enriches the empirical research on blue space and public health from the perspective of health geography, and suggests the need for ``healthy neighborhood'' and ``health aging'' planning in Chinese settings.},
+  file = {/home/icrichmond/Zotero/storage/NZ3GH7SV/Chen and Yuan - 2020 - The neighborhood effect of exposure to blue space .pdf},
+  journal = {Health \& Place},
+  language = {en}
 }
 
 @article{chovanec2002,
@@ -1845,16 +1882,39 @@
   number = {1}
 }
 
-@article{dolny2014,
+@article{dolny2014a,
   title = {Home {{Range}}, {{Movement}}, and {{Distribution Patterns}} of the {{Threatened Dragonfly Sympetrum}} Depressiusculum ({{Odonata}}: {{Libellulidae}}): {{A Thousand Times Greater Territory}} to {{Protect}}?},
-  author = {Dolny, Ale{\v s} and Harabi{\v s}, Filip and Mi{\v z} I{\v c}ov{\'a}, Hana},
+  shorttitle = {Home {{Range}}, {{Movement}}, and {{Distribution Patterns}} of the {{Threatened Dragonfly Sympetrum}} Depressiusculum ({{Odonata}}},
+  author = {Doln{\'y}, Ale{\v s} and Harabi{\v s}, Filip and Mi{\v z}i{\v c}ov{\'a}, Hana},
+  editor = {{Festa-Bianchet}, Marco},
   year = {2014},
+  month = jul,
   volume = {9},
-  pages = {1--10},
+  pages = {e100408},
+  issn = {1932-6203},
   doi = {10.1371/journal.pone.0100408},
-  abstract = {Dragonflies are good indicators of environmental health and biodiversity. Most studies addressing dragonfly ecology have focused on the importance of aquatic habitats, while the value of surrounding terrestrial habitats has often been overlooked. However, species associated with temporary aquatic habitats must persist in terrestrial environments for long periods. Little is known about the importance of terrestrial habitat patches for dragonflies, or about other factors that initiate or influence dispersal behaviour. The aim of this study was to reveal the relationship between population dynamics of the threatened dragonfly species Sympetrum depressiusculum at its natal site and its dispersal behaviour or routine movements within its terrestrial home range. We used a mark\textendash release\textendash recapture method (marking 2,881 adults) and exuviae collection with the Jolly\textendash Seber model and generalized linear models to analyse seasonal and spatial patterns of routine movement in a heterogeneous Central European landscape. Our results show that utilisation of terrestrial habitat patches by adult dragonflies is not random and may be relatively long term (approximately 3 mo). Adult dragonflies were present only in areas with dense vegetation that provided sufficient resources; the insects were absent from active agricultural patches (p = 0.019). These findings demonstrate that even a species tightly linked to its natal site utilises an area that is several orders of magnitude larger than the natal site. Therefore, negative trends in the occurrence of various dragonfly species may be associated not only with disturbances to their aquatic habitats, but also with changes in the surrounding terrestrial landscape. Citation: Doln A, Harabi\v{s} F, Mi\v{z}i\v{c}ov\'a H (2014) Home Range, Movement, and Distribution Patterns of the Threatened Dragonfly Sympetrum depressiusculum (Odonata: Libellulidae): A Thousand Times Greater Territory to Protect? PLoS ONE 9(7): e100408.},
+  abstract = {Dragonflies are good indicators of environmental health and biodiversity. Most studies addressing dragonfly ecology have focused on the importance of aquatic habitats, while the value of surrounding terrestrial habitats has often been overlooked. However, species associated with temporary aquatic habitats must persist in terrestrial environments for long periods. Little is known about the importance of terrestrial habitat patches for dragonflies, or about other factors that initiate or influence dispersal behaviour. The aim of this study was to reveal the relationship between population dynamics of the threatened dragonfly species Sympetrum depressiusculum at its natal site and its dispersal behaviour or routine movements within its terrestrial home range. We used a mark\textendash release\textendash recapture method (marking 2,881 adults) and exuviae collection with the Jolly\textendash Seber model and generalized linear models to analyse seasonal and spatial patterns of routine movement in a heterogeneous Central European landscape. Our results show that utilisation of terrestrial habitat patches by adult dragonflies is not random and may be relatively long term (approximately 3 mo). Adult dragonflies were present only in areas with dense vegetation that provided sufficient resources; the insects were absent from active agricultural patches (p = 0.019). These findings demonstrate that even a species tightly linked to its natal site utilises an area that is several orders of magnitude larger than the natal site. Therefore, negative trends in the occurrence of various dragonfly species may be associated not only with disturbances to their aquatic habitats, but also with changes in the surrounding terrestrial landscape.},
+  file = {/home/icrichmond/Zotero/storage/7KFHRUJU/Dolný et al. - 2014 - Home Range, Movement, and Distribution Patterns of.pdf},
   journal = {PLoS ONE},
+  language = {en},
   number = {7}
+}
+
+@article{dormann2007,
+  title = {Methods to Account for Spatial Autocorrelation in the Analysis of Species Distributional Data: A Review},
+  shorttitle = {Methods to Account for Spatial Autocorrelation in the Analysis of Species Distributional Data},
+  author = {Dormann, Carsten F. and McPherson, Jana M. and Ara{\'u}jo, Miguel B. and Bivand, Roger and Bolliger, Janine and Carl, Gudrun and Davies, Richard G. and Hirzel, Alexandre and Jetz, Walter and Kissling, W. Daniel and K{\"u}hn, Ingolf and Ohlem{\"u}ller, Ralf and Peres-Neto, Pedro R. and Reineking, Bj{\"o}rn and Schr{\"o}der, Boris and Schurr, Frank M. and Wilson, Robert},
+  year = {2007},
+  volume = {30},
+  pages = {609--628},
+  issn = {1600-0587},
+  doi = {10.1111/j.2007.0906-7590.05171.x},
+  abstract = {Species distributional or trait data based on range map (extent-of-occurrence) or atlas survey data often display spatial autocorrelation, i.e. locations close to each other exhibit more similar values than those further apart. If this pattern remains present in the residuals of a statistical model based on such data, one of the key assumptions of standard statistical analyses, that residuals are independent and identically distributed (i.i.d), is violated. The violation of the assumption of i.i.d. residuals may bias parameter estimates and can increase type I error rates (falsely rejecting the null hypothesis of no effect). While this is increasingly recognised by researchers analysing species distribution data, there is, to our knowledge, no comprehensive overview of the many available spatial statistical methods to take spatial autocorrelation into account in tests of statistical significance. Here, we describe six different statistical approaches to infer correlates of species' distributions, for both presence/absence (binary response) and species abundance data (poisson or normally distributed response), while accounting for spatial autocorrelation in model residuals: autocovariate regression; spatial eigenvector mapping; generalised least squares; (conditional and simultaneous) autoregressive models and generalised estimating equations. A comprehensive comparison of the relative merits of these methods is beyond the scope of this paper. To demonstrate each method's implementation, however, we undertook preliminary tests based on simulated data. These preliminary tests verified that most of the spatial modeling techniques we examined showed good type I error control and precise parameter estimates, at least when confronted with simplistic simulated data containing spatial autocorrelation in the errors. However, we found that for presence/absence data the results and conclusions were very variable between the different methods. This is likely due to the low information content of binary maps. Also, in contrast with previous studies, we found that autocovariate methods consistently underestimated the effects of environmental controls of species distributions. Given their widespread use, in particular for the modelling of species presence/absence data (e.g. climate envelope models), we argue that this warrants further study and caution in their use. To aid other ecologists in making use of the methods described, code to implement them in freely available software is provided in an electronic appendix.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.2007.0906-7590.05171.x},
+  file = {/home/icrichmond/Zotero/storage/JNZVNVHW/Dormann et al. - 2007 - Methods to account for spatial autocorrelation in .pdf;/home/icrichmond/Zotero/storage/DQY4V3X4/j.2007.0906-7590.05171.html},
+  journal = {Ecography},
+  language = {en},
+  number = {5}
 }
 
 @article{dorrah2012,
@@ -2033,6 +2093,24 @@
   abstract = {While the increasing vehicular traffic is widely suspected to play a role in the worldwide amphibian popu-lation decline, the research of amphibian road mortality is scarce, fragmented, fraught with methodological problems, and largely inconclusive. As the first attempt at a synthesis, we analyzed all available data on amphibian mortality in Europe and combined them with four previously unpublished surveys conducted by us. Based on our recalculation of road-kill counts in terms of species-specific road-kill recordability, we conclude that, in lowland Central Europe, the common toads, Bufo bufo, are the most common victims of vehicular traffic in suburban landscapes, while the common frogs, Rana temporaria and Triturus newts, prevail in rural landscapes. The green frogs also tend to be more frequent in rural areas. Common tree frogs, Hyla arborea, are unexpectedly rare in the road-kill record despite their terrestrial and migratory habits. In consideration of problems with obtaining accurate amphib-ian population estimates, we further propose the road kills-to-spawners ratio (R/S) as a working measure of the impact of road mortality on a local population. While the R/S ratio may not reflect the losses to an entire local amphibian population, it is free of the errors of whole-population estimates, which are notoriously difficult for amphibians. When corrected for species-specific road-kill recordability, most results suggest that the impact of roads on newts may have been under-estimated and that the impact on common frog populations may be higher than on those of common toads.},
   journal = {European Journal of Wildlife Research},
   keywords = {Amphibian conservation,Habitat fragmentation,Road ecology}
+}
+
+@article{england1994,
+  title = {Getting Personal: {{Reflexivity}}, Positionality, and Feminist Research},
+  shorttitle = {Getting Personal},
+  author = {England, Kim V.L.},
+  year = {1994},
+  month = feb,
+  volume = {46},
+  pages = {80},
+  publisher = {{Taylor \& Francis Ltd}},
+  issn = {00330124},
+  doi = {10.1111/j.0033-0124.1994.00080.x},
+  abstract = {Examines ethical questions researchers face when conducting fieldworks in geography.  Effect of researcher's positionality and biography on fieldwork; Fieldwork as a dialogical process; Effects of feminism and poststructuralism.},
+  file = {/home/icrichmond/Zotero/storage/NEFJZ56V/England - 1994 - Getting personal Reflexivity, positionality, and .pdf},
+  journal = {Professional Geographer},
+  keywords = {FIELD work (Research),GEOGRAPHERS,GEOGRAPHY,PROFESSIONAL ethics},
+  number = {1}
 }
 
 @techreport{environmentandclimatechangecanada2012,
@@ -2509,6 +2587,23 @@
   file = {/home/icrichmond/Zotero/storage/WXNHNNR5/Frost et al. - 2005 - Nordic Society Oikos Are You What You Eat Physiological Constraints on Organismal Stoichiometry in an.pdf},
   journal = {Nordic Society Oikos},
   number = {1}
+}
+
+@article{frumkin2017,
+  title = {Nature {{Contact}} and {{Human Health}}: {{A Research Agenda}}},
+  shorttitle = {Nature {{Contact}} and {{Human Health}}},
+  author = {Frumkin, Howard and Bratman, Gregory N. and Breslow, Sara Jo and Cochran, Bobby and Kahn Jr, Peter H. and Lawler, Joshua J. and Levin, Phillip S. and Tandon, Pooja S. and Varanasi, Usha and Wolf, Kathleen L. and Wood, Spencer A.},
+  year = {2017},
+  month = jul,
+  volume = {125},
+  pages = {075001},
+  issn = {0091-6765, 1552-9924},
+  doi = {10.1289/EHP1663},
+  abstract = {BACKGROUND: At a time of increasing disconnectedness from nature, scientific interest in the potential health benefits of nature contact has grown. Research in recent decades has yielded substantial evidence, but large gaps remain in our understanding. OBJECTIVES: We propose a research agenda on nature contact and health, identifying principal domains of research and key questions that, if answered, would provide the basis for evidence-based public health interventions. DISCUSSION: We identify research questions in seven domains: a) mechanistic biomedical studies; b) exposure science; c) epidemiology of health benefits; d) diversity and equity considerations; e) technological nature; f) economic and policy studies; and g) implementation science. CONCLUSIONS: Nature contact may offer a range of human health benefits. Although much evidence is already available, much remains unknown. A robust research effort, guided by a focus on key unanswered questions, has the potential to yield high-impact, consequential public health insights. https://doi.org/10.1289/EHP1663},
+  file = {/home/icrichmond/Zotero/storage/8AK2TCBA/Frumkin et al. - 2017 - Nature Contact and Human Health A Research Agenda.pdf},
+  journal = {Environmental Health Perspectives},
+  language = {en},
+  number = {7}
 }
 
 @article{fu2013,
@@ -4254,15 +4349,19 @@
   institution = {{Ontario Ministry of Natural Resources}}
 }
 
-@article{legall2018,
+@article{legall2018a,
   title = {Determinant Landscape-Scale Factors on Pond Odonate Assemblages},
-  author = {Le Gall, Mickael and Fournier, Matthieu and {Chaput-Bardy}, Audrey and Hust{\'e}, Aur{\'e}lie},
+  author = {Le Gall, Micka{\"e}l and Fournier, Matthieu and {Chaput-Bardy}, Audrey and Hust{\'e}, Aur{\'e}lie},
   year = {2018},
+  month = mar,
   volume = {63},
   pages = {306--317},
+  issn = {00465070},
   doi = {10.1111/fwb.13065},
-  abstract = {1. Species assemblages are related to environmental factors acting at different land-scape scales. Local habitat heterogeneity also contributes to maintain the regional species pool. Understanding factors determining species presence is therefore cru-cial for formulation of successful conservation and management strategies. 2. Odonates can reveal much about patterns of species assemblages since their presence at a site reflects both their dispersal ability and life cycle constraints. Odonate assemblages were studied at 31 ponds located in three different land-scapes: forest, urban and field. The impact of pond geographical distribution and their local characteristics (i.e., vegetation, suspended matter, freshwater macroin-vertebrates, pond area and temporariness) on odonate composition, species rich-ness and larval presence were studied. 3. According to their intrinsic requirements, damselfly and dragonfly presence on ponds depended on local characteristics. Some species of the two orders were only detected in field or forest ponds. Moreover, some species were never detected in urban ponds. Differences in odonate assemblages were mainly related to vegetation, freshwater macroinvertebrates and pond area. Species richness was related to predator abundance and pond area, especially for drag-onflies. The presence and abundance of odonate larvae were both related to aquatic vegetation, and to contrasted aquatic variables of ponds. Therefore, this study confirms that vegetation within and around ponds determines odonate presence. Interestingly, in a pond, species detected at the adult stage were not always detected at the larval stage, highlighting the need to really consider both parts of the lifecycle when studying odonate assemblages. 4. Diversity of local habitats within and around ponds depends strongly on the sur-rounding landscape and influences the assembly of odonates. Forest and field ponds presented particularly dissimilar species assemblages. Urban ponds had no specific environmental habitats compared to the other contexts. Species present on these ponds are rather generalist and able to support human disturbances. Overall, this study confirms that pond heterogeneity may be a key factor in maintaining the regional pool of odonate species.},
-  journal = {Freshwater Biology}
+  file = {/home/icrichmond/Zotero/storage/HART9VIJ/Le Gall et al. - 2018 - Determinant landscape-scale factors on pond odonat.pdf},
+  journal = {Freshwater Biology},
+  language = {en},
+  number = {3}
 }
 
 @article{lehnherr2012,
@@ -4755,6 +4854,22 @@
   keywords = {climate change,drought,grassland,Key-words: arbuscular mycorrhizal fungi,N:P stoichiometry,plant mineral nutrition,plant-soil (below-ground) interactions,subordinate species,water-use efficiency}
 }
 
+@article{martin2011,
+  title = {Measuring Individual Differences in Reaction Norms in Field and Experimental Studies: A Power Analysis of Random Regression Models: {{{\emph{Power}}}}{\emph{ Analysis of Random Regression Models}}},
+  shorttitle = {Measuring Individual Differences in Reaction Norms in Field and Experimental Studies},
+  author = {Martin, Julien G. A. and Nussey, Daniel H. and Wilson, Alastair J. and R{\'e}ale, Denis},
+  year = {2011},
+  month = aug,
+  volume = {2},
+  pages = {362--374},
+  issn = {2041210X},
+  doi = {10.1111/j.2041-210X.2010.00084.x},
+  file = {/home/icrichmond/Zotero/storage/E9VAWU9N/Martin et al. - 2011 - Measuring individual differences in reaction norms.pdf},
+  journal = {Methods in Ecology and Evolution},
+  language = {en},
+  number = {4}
+}
+
 @article{martinez2012,
   title = {Artificial Modifications of the Coast in Response to the {{Deepwater Horizon}} Oil Spill: Quick Solutions or Long-Term Liabilities?},
   author = {Mart{\'i}nez, Luisa and Feagin, Rusty A and Yeager, Kevin M and Day, John and Costanza, Robert and Harris, Jim A and Hobbs, Richard J and {L{\'o}pez-Portillo}, Jorge and Walker, Ian J and Higgs, Eric and {Moreno-Casasola}, Patricia and Sheinbaum, Julio and Y{\'a}{\~n}ez, Alejandro},
@@ -4896,16 +5011,22 @@
   number = {1}
 }
 
-@article{mccauley2014,
+@article{mccauley2014a,
   title = {Dispersal, Niche Breadth and Population Extinction: Colonization Ratios Predict Range Size in {{North American}} Dragonflies},
-  author = {McCauley, Shannon J and Davis, Christopher J and Werner, Earl E and Robeson Ii, Michael S},
+  shorttitle = {Dispersal, Niche Breadth and Population Extinction},
+  author = {McCauley, Shannon J. and Davis, Christopher J. and Werner, Earl E. and Robeson, Michael S.},
   year = {2014},
   volume = {83},
   pages = {858--865},
+  issn = {1365-2656},
   doi = {10.1111/1365-2656.12181},
-  abstract = {1. Species' range sizes are shaped by fundamental differences in species' ecological and evolu-tionary characteristics, and understanding the mechanisms determining range size can shed light on the factors responsible for generating and structuring biological diversity. Moreover, because geographic range size is associated with a species' risk of extinction and their ability to respond to global changes in climate and land use, understanding these mechanisms has important conservation implications. 2. Despite the hypotheses that dispersal behaviour is a strong determinant of species range areas, few data are available to directly compare the relationship between dispersal behaviour and range size. Here, we overcome this limitation by combining data from a multispecies dis-persal experiment with additional species-level trait data that are commonly hypothesized to affect range size (e.g. niche breadth, local abundance and body size.). This enables us to examine the relationship between these species-level traits and range size across North Amer-ica for fifteen dragonfly species. 3. Ten models based on a priori predictions about the relationship between species traits and range size were evaluated and two models were identified as good predictors of species range size. These models indicated that only two species' level traits, dispersal behaviour and niche breadth were strongly related to range size. The evidence from these two models indicated that dragonfly species that disperse more often and further had larger North American ranges. 4. Extinction and colonization dynamics are expected to be a key linkage between dispersal behaviour and range size in dragonflies. To evaluate how extinction and colonization dynam-ics among dragonflies were related to range size we used an independent data set of extinction and colonization rates for eleven dragonfly species and assessed the relationship between these populations rates and North American range areas for these species. 5. We found a negative relationship between North American range size and species' extinc-tion-to-colonization ratios. Our results indicate that metapopulation dynamics act to shape the extent of species' continental distributions. These population dynamics are likely to inter-act with dispersal behaviour, particularly at species range margins, to determine range limits and ultimately species range sizes.},
+  abstract = {Species' range sizes are shaped by fundamental differences in species' ecological and evolutionary characteristics, and understanding the mechanisms determining range size can shed light on the factors responsible for generating and structuring biological diversity. Moreover, because geographic range size is associated with a species' risk of extinction and their ability to respond to global changes in climate and land use, understanding these mechanisms has important conservation implications. Despite the hypotheses that dispersal behaviour is a strong determinant of species range areas, few data are available to directly compare the relationship between dispersal behaviour and range size. Here, we overcome this limitation by combining data from a multispecies dispersal experiment with additional species-level trait data that are commonly hypothesized to affect range size (e.g. niche breadth, local abundance and body size.). This enables us to examine the relationship between these species-level traits and range size across North America for fifteen dragonfly species. Ten models based on a priori predictions about the relationship between species traits and range size were evaluated and two models were identified as good predictors of species range size. These models indicated that only two species' level traits, dispersal behaviour and niche breadth were strongly related to range size. The evidence from these two models indicated that dragonfly species that disperse more often and further had larger North American ranges. Extinction and colonization dynamics are expected to be a key linkage between dispersal behaviour and range size in dragonflies. To evaluate how extinction and colonization dynamics among dragonflies were related to range size we used an independent data set of extinction and colonization rates for eleven dragonfly species and assessed the relationship between these populations rates and North American range areas for these species. We found a negative relationship between North American range size and species' extinction-to-colonization ratios. Our results indicate that metapopulation dynamics act to shape the extent of species' continental distributions. These population dynamics are likely to interact with dispersal behaviour, particularly at species range margins, to determine range limits and ultimately species range sizes.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2656.12181},
+  file = {/home/icrichmond/Zotero/storage/VIKNM9IK/McCauley et al. - 2014 - Dispersal, niche breadth and population extinction.pdf;/home/icrichmond/Zotero/storage/G8RPUD49/1365-2656.html},
   journal = {Journal of Animal Ecology},
-  keywords = {dispersal limitation,extinction–colonization,freshwater connectivity,geographic distribution,Key-words,niche breadth,Odonata,range limits,range size}
+  keywords = {dispersal limitation,extinction–colonization,freshwater connectivity,geographic distribution,niche breadth,Odonata,range limits,range size},
+  language = {en},
+  number = {4}
 }
 
 @article{mcdonald2020,
@@ -5157,7 +5278,7 @@
 @book{millenniumecosystemassessment2005,
   title = {Ecosystems and Human Well-Being: Health Synthesis},
   shorttitle = {Ecosystems and Human Well-Being},
-  author = {Millennium Ecosystem Assessment},
+  author = {{Millennium Ecosystem Assessment}},
   editor = {Corval{\'a}n, C. and Hales, Simon and McMichael, A. J.},
   year = {2005},
   publisher = {{World Health Organization}},
@@ -7007,6 +7128,24 @@
   keywords = {Bactrocera tryoni,Resource dynamics,Spatially-explicit modelling,Spatio-temporal dynamics}
 }
 
+@article{secules2021,
+  title = {Positionality Practices and Dimensions of Impact on Equity Research: {{A}} Collaborative Inquiry and Call to the Community},
+  shorttitle = {Positionality Practices and Dimensions of Impact on Equity Research},
+  author = {Secules, Stephen and McCall, Cassandra and Mejia, Joel Alejandro and Beebe, Chanel and Masters, Adam S. and S{\'a}nchez-Pe{\~n}a, Matilde L. and Svyantek, Martina},
+  year = {2021},
+  volume = {110},
+  pages = {19--43},
+  issn = {2168-9830},
+  doi = {10.1002/jee.20377},
+  abstract = {Background Many engineering education researchers acknowledge that their positionality impacts their research. Practices for reporting positionality vary widely and rarely incorporate a nuanced discussion of the impact of demographic identities on research. Researchers holding marginalized or relatively hidden identities must navigate additional layers regarding transparency of their positionality. Purpose We identify ways in which positionality impacts research, with a particular emphasis on demographic identity dimensions. We note that whether identities are relatively marginalized, privileged, hidden, or apparent in a research context creates complexities for conceptualizing, practicing, and disclosing one's positionality. Method In a collaborative inquiry informed by autoethnography, we assemble positionality reflections of current engineering education researchers to demonstrate the primary ways in which positionality impacts research. Results We find that positionality impacts six fundamental aspects of research: research topic, epistemology, ontology, methodology, relation to participants, and communication. These aspects of research delve deeper than conceptions of positionality as a methodological limitation, a measure to prevent bias, or a requirement for research quality. Conclusion The impact of positionality on research is complex, particularly when researchers occupy minoritized identities and for research topics that interrogate power relations between identity groups. By demonstrating the practices of interrogating and representing positionality, we hope to encourage more researchers to represent positionality transparently, thus making researchers' transparency safer for all. We argue that positionality is an important tool for reflecting on and dislocating privilege, particularly when working on equity research.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/jee.20377},
+  file = {/home/icrichmond/Zotero/storage/S8AP5S7P/Secules et al. - 2021 - Positionality practices and dimensions of impact o.pdf;/home/icrichmond/Zotero/storage/5ZY6527E/jee.html},
+  journal = {Journal of Engineering Education},
+  keywords = {epistemology,equity,identity,intersectionality,positionality,research methods},
+  language = {en},
+  number = {1}
+}
+
 @article{seidu2017,
   title = {Odonata Community Structure and Patterns of Land Use in the {{Atewa Range Forest Reserve}}, {{Eastern Region}} ({{Ghana}})},
   author = {Seidu, Issah and Danquah, Emmanuel and Ayine Nsor, Collins and Amaning Kwarteng, David and Lancaster, Lesley T},
@@ -7548,6 +7687,24 @@
   file = {/home/icrichmond/Zotero/storage/5V2256UT/Tappeiner2020_Article_HowToConsiderHistoryInLandscap.pdf;/home/icrichmond/Zotero/storage/MH4V4JHD/Tappeiner et al. - 2020 - How to consider history in landscape ecology patt.pdf},
   journal = {Landscape Ecology},
   language = {en}
+}
+
+@article{tatsumi2021,
+  title = {Temporal Changes in Spatial Variation: Partitioning the Extinction and Colonisation Components of Beta Diversity},
+  shorttitle = {Temporal Changes in Spatial Variation},
+  author = {Tatsumi, Shinichi and Iritani, Ryosuke and Cadotte, Marc W.},
+  year = {2021},
+  volume = {24},
+  pages = {1063--1072},
+  issn = {1461-0248},
+  doi = {10.1111/ele.13720},
+  abstract = {The last two decades have witnessed unprecedented changes in beta diversity, the spatial variation in species composition, from local to global scales. However, analytical challenges have hampered empirical ecologists from quantifying the extinction and colonisation processes behind these changing beta diversity patterns. Here, we develop a novel numerical method to additively partition the temporal changes in beta diversity into components that reflect local extinctions and colonisations. By applying this method to empirical datasets, we revealed spatiotemporal community dynamics that were otherwise undetectable. In mature forests, we found that local extinctions resulted in tree communities becoming more spatially heterogeneous, while colonisations simultaneously caused them to homogenise. In coral communities, we detected non-random community disassembly and reassembly following an environmental perturbation, with a temporally varying balance between extinctions and colonisations. Partitioning the dynamic processes that underlie beta diversity can provide more mechanistic insights into the spatiotemporal organisation of biodiversity.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ele.13720},
+  file = {/home/icrichmond/Zotero/storage/QGP7BDCG/Tatsumi et al. - 2021 - Temporal changes in spatial variation partitionin.pdf;/home/icrichmond/Zotero/storage/2FCKL5NZ/ele.html},
+  journal = {Ecology Letters},
+  keywords = {Biotic homogenisation,community assembly,metacommunity,spatial heterogeneity,species turnover,temporal ecology},
+  language = {en},
+  number = {5}
 }
 
 @article{taylor1993,
